Add button to toggle all job params in Dashboard

--- a/engine/app/views/shared/_jobs_table.erb
+++ b/engine/app/views/shared/_jobs_table.erb
@@ -2,13 +2,21 @@
   <div class="table-responsive">
     <table class="table card-table table-bordered table-hover table-sm mb-0">
       <thead>
-        <th>GoodJob ID</th>
-        <th>ActiveJob ID</th>
-        <th>Job Class</th>
-        <th>Queue</th>
-        <th>Scheduled At</th>
-        <th>Error</th>
-        <th>ActiveJob Params</th>
+        <tr>
+          <th>GoodJob ID</th>
+          <th>ActiveJob ID</th>
+          <th>Job Class</th>
+          <th>Queue</th>
+          <th>Scheduled At</th>
+          <th>Error</th>
+          <th>
+            ActiveJob Params&nbsp;
+            <%= tag.button "Toggle", type: "button", class: "btn btn-sm btn-outline-primary", role: "button",
+                           data: { bs_toggle: "collapse", bs_target: ".job-params" },
+                           aria: { expanded: false, controls: jobs.map { |job| "##{dom_id(job, "params")}" }.join(" ") }
+            %>
+          </th>
+        </tr>
       </thead>
       <tbody>
         <% jobs.each do |job| %>
@@ -21,11 +29,10 @@
             <td><%= job.error %></td>
             <td>
               <%= tag.button "Preview", type: "button", class: "btn btn-sm btn-outline-primary", role: "button",
-                data: {bs_toggle: "collapse", bs_target: "##{dom_id(job, 'params')}"},
-                aria: {expanded: false, controls: dom_id(job, "params")}
+                data: { bs_toggle: "collapse", bs_target: "##{dom_id(job, 'params')}" },
+                aria: { expanded: false, controls: dom_id(job, "params") }
               %>
-              <%= tag.pre JSON.pretty_generate(job.serialized_params), id: dom_id(job, "params"), class: "collapse" %>
-            </td>
+              <%= tag.pre JSON.pretty_generate(job.serialized_params), id: dom_id(job, "params"), class: "collapse job-params" %>
           </tr>
         <% end %>
       </tbody>
